--- a/ecoc.ipynb
+++ b/ecoc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +47,7 @@
        "42000"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -343,13 +343,110 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "Since keeping $C = 1$ fixed and increasing the number of training points does not seem to guarantee a good increase in success, let us now, for fixed number_of_im = 100, test multiple $\\lambda$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300\n",
+      "Attention, data point could not be uniquely classified, index 21 possible classification [3, 5]\n",
+      "Attention, data point could not be uniquely classified, index 31 possible classification [3, 9]\n",
+      "Attention, data point could not be uniquely classified, index 43 possible classification [1, 4]\n",
+      "Attention, data point could not be uniquely classified, index 62 possible classification [2, 8]\n",
+      "Attention, data point could not be uniquely classified, index 75 possible classification [2, 7]\n",
+      "Attention, data point could not be uniquely classified, index 77 possible classification [3, 9]\n",
+      "Attention, data point could not be uniquely classified, index 84 possible classification [1, 4]\n",
+      "Attention, data point could not be uniquely classified, index 94 possible classification [0, 5, 6]\n",
+      "Attention, data point could not be uniquely classified, index 97 possible classification [5, 6]\n",
+      "Attention, data point could not be uniquely classified, index 115 possible classification [6, 9]\n",
+      "Attention, data point could not be uniquely classified, index 145 possible classification [2, 8]\n",
+      "Attention, data point could not be uniquely classified, index 151 possible classification [0, 9]\n",
+      "Attention, data point could not be uniquely classified, index 160 possible classification [0, 3]\n",
+      "Attention, data point could not be uniquely classified, index 184 possible classification [6, 9]\n",
+      "Attention, data point could not be uniquely classified, index 185 possible classification [0, 5]\n",
+      "Attention, data point could not be uniquely classified, index 189 possible classification [6, 9]\n",
+      "Attention, data point could not be uniquely classified, index 197 possible classification [3, 5]\n",
+      "Attention, data point could not be uniquely classified, index 213 possible classification [1, 2, 8]\n",
+      "Attention, data point could not be uniquely classified, index 216 possible classification [3, 5]\n",
+      "Attention, data point could not be uniquely classified, index 221 possible classification [2, 7]\n",
+      "Attention, data point could not be uniquely classified, index 231 possible classification [2, 8]\n",
+      "Attention, data point could not be uniquely classified, index 247 possible classification [0, 9]\n",
+      "Attention, data point could not be uniquely classified, index 265 possible classification [2, 8]\n",
+      "Attention, data point could not be uniquely classified, index 269 possible classification [0, 5, 6]\n",
+      "Attention, data point could not be uniquely classified, index 276 possible classification [1, 7]\n",
+      "Attention, data point could not be uniquely classified, index 277 possible classification [5, 6]\n",
+      "Attention, data point could not be uniquely classified, index 281 possible classification [7, 8]\n",
+      "number of correctly classified labels:  179  out of  300\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel\\__main__.py:14: VisibleDeprecationWarning: boolean index did not match indexed array along dimension 0; dimension is 100 but corresponding boolean dimension is 300\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "index 100 is out of bounds for axis 0 with size 100",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-dcc2f39aa8f9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mlambd\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlambdavector\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[1;31m# call classifier with pickle.load\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0mecoc_labels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_supp_ind\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_alpha\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_b\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_kernel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcode_words\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbarycenters\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mecoc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_images_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_labels_test\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mpenalty\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mnumber_of_im\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mlambd\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m     \u001b[1;31m#ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words, barycenters=pickle.load(open (\"trained_ecoc_\"+str(number_of_im)+\".dat\", \"rb\"))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[1;31m# call predict function\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-8-097841d4575e>\u001b[0m in \u001b[0;36mecoc\u001b[0;34m(labeled_data, labels, kernel, penalty, list_sigma)\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0mind\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlabels\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m         \u001b[0mbarycenters\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabeled_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mind\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[1;31m# define code_word matrix, the ith row corresponds to the number i\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 100 is out of bounds for axis 0 with size 100"
+     ]
+    }
+   ],
+   "source": [
+    "lambdavector = np.linspace(0.01,50, num = 50)\n",
+    "\n",
+    "number_of_im = 100;\n",
+    "train_images_test = train_images[:number_of_im]\n",
+    "train_labels_test = train_labels[:number_of_im]\n",
+    "np.shape(train_images_test)[0]\n",
+    "\n",
+    "# \"unknown\" data to be classified\n",
+    "number_of_test_data = 300\n",
+    "test_data = train_images[number_of_im:number_of_im+number_of_test_data]\n",
+    "\n",
+    "for lambd in lambdavector:\n",
+    "    # call classifier with pickle.load\n",
+    "    ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words, barycenters=ecoc(train_images_test, train_labels_test,penalty=1/(2*number_of_im*lambd))\n",
+    "    #ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words, barycenters=pickle.load(open (\"trained_ecoc_\"+str(number_of_im)+\".dat\", \"rb\"))\n",
+    "    # call predict function\n",
+    "    predicted_labels_test=predict_ecoc(train_images[number_of_im:number_of_im+number_of_test_data], \n",
+    "                                       train_images[:number_of_im], ecoc_labels, list_supp_ind, list_alpha, \n",
+    "                                       list_b, list_kernel, code_words, barycenters)\n",
+    "    predicted_labels_test = predicted_labels_test.astype(float)\n",
+    "    # print(\"predicted labels: \", predicted_labels_test)\n",
+    "\n",
+    "    # get actual labels\n",
+    "    train_labels_test=train_labels[number_of_im:number_of_im+number_of_test_data]\n",
+    "    train_labels_test = train_labels_test.astype(float)\n",
+    "    # print(\"actual labels: \", train_labels_test)\n",
+    "    \n",
+    "    print(\"number of correctly classified labels: \", sum(predicted_labels_test.astype(int)==train_labels_test.astype(int)), \n",
+    "          \" out of \", number_of_test_data);\n",
+    "\n",
+    "    # check if there is are a couple of classifiers who make more mistakes than others\n",
+    "    # then we could possibly change some of the parameters\n"
+   ]
   },
   {
    "cell_type": "code",
