--- a/ecoc.ipynb
+++ b/ecoc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -18,6 +18,7 @@
     "from sklearn.metrics.pairwise import pairwise_kernels\n",
     "from scipy.optimize import minimize\n",
     "from scipy.spatial.distance import hamming\n",
+    "from mySVM_class import *\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
@@ -25,18 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "train = pd.read_csv('Data/train.csv')"
+    "train = pd.read_csv('Data/train.csv', nrows = 5000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -44,10 +45,10 @@
     {
      "data": {
       "text/plain": [
-       "42000"
+       "'#standardize data\\ndata_mean = train_images.mean().astype(np.float32)\\ndata_std = train_images.std().astype(np.float32)\\n\\ndef standardize(x): \\n    return (x-data_mean)/data_std\\n\\ntrain_images = standardize(train_images)'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,39 +56,22 @@
    "source": [
     "images = [\"%s%s\" %(\"pixel\",pixel_no) for pixel_no in range(0,28**2)]\n",
     "train_images = np.array(train[images], dtype=np.float)/100\n",
-    "#dimensionserhoehung, damit am ende b = 0\n",
-    "train_images = np.concatenate((train_images, np.ones((len(train_images),1))), axis = 1)\n",
-    "\n",
     "train_labels = np.array(train['label'])\n",
     "label0 = np.array([1 if i==0 else -1 for i in train_labels])\n",
-    "len(train_images)"
+    "\n",
+    "'''#standardize data\n",
+    "data_mean = train_images.mean().astype(np.float32)\n",
+    "data_std = train_images.std().astype(np.float32)\n",
+    "\n",
+    "def standardize(x): \n",
+    "    return (x-data_mean)/data_std\n",
+    "\n",
+    "train_images = standardize(train_images)'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from mySVM_class import *\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -143,8 +127,8 @@
     "        list_kernel.append(svm.kernel);\n",
     "        \n",
     "    # pickle dump to save and call saved objects    \n",
-    "    pickle.dump((ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words, barycenters), \n",
-    "                open( \"trained_ecoc_\"+str(l)+\".dat\", \"wb\" ))\n",
+    "    #pickle.dump((ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, list_sigma, code_words, barycenters), \n",
+    "     #           open( \"trained_ecoc_\"+str(l)+\".dat\", \"wb\" ))\n",
     "    \n",
     "    # now I need to call a binary classifier for each column of ecoc_labels\n",
     "    # from decision functions we get seperating hyperplanes, margin, ... \n",
@@ -156,16 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -177,9 +152,7 @@
     "    # every row is one data point\n",
     "    # number of rows = # of data points\n",
     "    l=np.shape(unlabeled_data)[0];\n",
-    "    print(l)\n",
     "    new_labels=np.zeros((l,15));\n",
-    "    \n",
     "    temp_label_ind=[];\n",
     "    final_labels = np.array(['inf']*l);\n",
     "    \n",
@@ -216,6 +189,79 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 12min 31s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "no_train = 400\n",
+    "train = train_images[:no_train]\n",
+    "train_l = train_labels[:no_train]\n",
+    "test = train_images[no_train:no_train+400]\n",
+    "test_l = train_labels[no_train:no_train+400]\n",
+    "lambda_opt = 1/(36*200.)\n",
+    "C_opt = 1./(2*lambda_opt*len(train))\n",
+    "sigma_opt = 0.005\n",
+    "ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words, barycenters = ecoc(\n",
+    "    train, train_l, penalty=C_opt, \n",
+    "    kernel=gaussian_kernel, list_sigma=[sigma_opt]*15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Attention, data point could not be uniquely classified, index 53 possible classification [3, 5]\n",
+      "Attention, data point could not be uniquely classified, index 57 possible classification [0, 9]\n",
+      "Attention, data point could not be uniquely classified, index 103 possible classification [0, 3, 5]\n",
+      "Attention, data point could not be uniquely classified, index 120 possible classification [4, 7]\n",
+      "Attention, data point could not be uniquely classified, index 139 possible classification [3, 5, 9]\n",
+      "Attention, data point could not be uniquely classified, index 148 possible classification [0, 5]\n",
+      "Attention, data point could not be uniquely classified, index 241 possible classification [2, 4]\n",
+      "Attention, data point could not be uniquely classified, index 286 possible classification [5, 9]\n",
+      "Attention, data point could not be uniquely classified, index 334 possible classification [3, 5]\n",
+      "Attention, data point could not be uniquely classified, index 367 possible classification [0, 5, 6]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.82999999999999996"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_labels = predict_ecoc(test, train, ecoc_labels, list_supp_ind, \n",
+    "                 list_alpha, list_b, list_kernel, code_words, barycenters)\n",
+    "final_labels = final_labels.astype(np.int64)\n",
+    "score = sum([test_l[i] == final_labels[i] for i in range(len(final_labels))])/float(len(test_l))\n",
+    "score\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -249,15 +295,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_images_test' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-51-3ddeabd76e2a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[1;31m# call classifier with pickle.load\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mecoc_labels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_supp_ind\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_alpha\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_b\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_kernel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_sigma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcode_words\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbarycenters\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mecoc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_images_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_labels_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mecoc_labels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_supp_ind\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_alpha\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_b\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_kernel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_sigma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcode_words\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbarycenters\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mpickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mopen\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34m\"trained_ecoc_\"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumber_of_im\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\".dat\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"rb\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'train_images_test' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# call classifier with pickle.load\n",
-    "ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words, barycenters=ecoc(train_images_test, train_labels_test)\n",
-    "ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words, barycenters=pickle.load(open (\"trained_ecoc_\"+str(number_of_im)+\".dat\", \"rb\"))\n",
+    "ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, list_sigma, code_words, barycenters=ecoc(train_images_test, train_labels_test)\n",
+    "ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, list_sigma, code_words, barycenters=pickle.load(open (\"trained_ecoc_\"+str(number_of_im)+\".dat\", \"rb\"))\n",
     "\n"
    ]
   },
@@ -346,8 +404,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -361,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
